--- a/app/views/hooks/inline_image_hook/_inline_images_paste.erb
+++ b/app/views/hooks/inline_image_hook/_inline_images_paste.erb
@@ -7,7 +7,7 @@
 <% if images.any? %>
 	<div class="journal attachments">
 	<% images.each do |image| %>
-		<%= link_to image_tag(url_for({:controller => 'attachments', :action => 'thumbnail', :id => image })),
+          <%= link_to image_tag(url_for({:controller => 'attachments', :action => 'thumbnail', :id => image, :size => 100 }), :height => '100'),
                           {:controller => 'attachments', :action => 'show', :id => image, :filename => image.filename },
                           :class => 'lightbox', :rel => 'attachments',
                           :title => "#{image.filename}#{ ('-' + image.description) unless image.description.blank? }" %>
